<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    xmlns:gauge="http://schemas.android.com/apk/res/com.vectormagnetics.android.drillerdisplay"
    android:id="@+id/maincontainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp" >

    <!-- 02/14 lay things out to make better use of screen space -->
    <!-- if scaleStartAngle = 0 => treat gauge like a compass (see GaugeView.java) -->
   <org.codeandmagic.android.gauge.GaugeView
       android:id="@+id/gauge_tf"
	   android:layout_marginTop="10dp"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight=".5"
       gauge:showText="true"
       gauge:showOuterShadow="false"
       gauge:scaleStartAngle="0.0"
       gauge:textValueSize="0.1"
       gauge:divisions="8"
       /><!-- 01/14 add showOuterShadow to prevent exception in layout mode -->

	<LinearLayout 
		android:id="@+id/azcontainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:gravity="center" >
	    
		<TextView
		    android:id="@+id/lblAz"
			android:text="@string/lbl_az"
			android:layout_width="wrap_content"
       		android:layout_height="match_parent"
	        android:textSize="20sp"
	        android:gravity="center" /><!-- 03/14 set textsizes to 20sp for narrower device screens (those with 480dp+ will still use 24sp) -->
		<TextView
	        android:id="@+id/txtAz"
	        android:layout_width="wrap_content"
       		android:layout_height="match_parent"
	        android:textSize="20sp"
	        android:gravity="center"
	        android:text="@string/no_data" />
		
		<!-- 02/14 add separator bars between text -->
		<View
		    android:layout_width="2dp"
		    android:layout_height="fill_parent"
		    android:layout_margin="10dp"
		    android:background="@android:color/darker_gray"/>
		
		<TextView
			android:id="@+id/lblIncl"
			android:text="@string/lbl_incl"
			android:layout_width="wrap_content"
       		android:layout_height="match_parent"
	        android:textSize="20sp"
	        android:gravity="center" />
	    
	   	<TextView
			android:id="@+id/txtIncl"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:textSize="20sp"
			android:gravity="center"
			android:text="@string/no_data" />
	   
	   	<View
		    android:layout_width="2dp"
		    android:layout_height="fill_parent"
		    android:layout_margin="10dp"
		    android:background="@android:color/darker_gray"/>
	   	
	    <!-- 02/14 add MD -->
	   	<TextView
			android:id="@+id/lblMd"
			android:text="@string/lbl_md"
			android:layout_width="wrap_content"
       		android:layout_height="match_parent"
	        android:textSize="20sp"
	        android:gravity="center" />
	    
	   	<TextView
			android:id="@+id/txtMd"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:textSize="20sp"
			android:gravity="center"
			android:text="@string/no_data" />		   
	</LinearLayout>

	<!-- 02/14 make some tweaks to how pressure gauges appear -->
	<LinearLayout 
		android:id="@+id/pgaugecontainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".35" >
	
		<org.codeandmagic.android.gauge.GaugeView
		    android:id="@+id/gauge_p1"
		    android:layout_width="wrap_content"
		    android:layout_weight=".5"
			android:layout_height="match_parent"
		    gauge:showOuterShadow="false"
		    gauge:scaleStartAngle="30"
		    gauge:showText="true"
		    gauge:textValueSize="0.1"
		    gauge:textDivisionTickSize="0.075" />
		
		<org.codeandmagic.android.gauge.GaugeView
		    android:id="@+id/gauge_p2"
		    android:layout_width="wrap_content"
		    android:layout_weight=".5"
			android:layout_height="match_parent"
		    gauge:showOuterShadow="false"
		    gauge:scaleStartAngle="30"
		    gauge:showText="true"
		    gauge:textValueSize="0.1"
		    gauge:textDivisionTickSize="0.075" />
		
	</LinearLayout>
	
	<!-- 02/14 add pressure gauge labels -->
	<LinearLayout 
		android:id="@+id/gaugelabelscontainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".05" >
		
   	   	<TextView
			android:id="@+id/lblP1"
			android:text="@string/lbl_p1"
			android:layout_width="wrap_content"
			android:layout_weight=".5"
       		android:layout_height="match_parent"
	        android:textSize="12sp"
	        android:gravity="center" />
	    
	   	<TextView
			android:id="@+id/txtP2"
			android:text="@string/lbl_p2"
			android:layout_width="wrap_content"
			android:layout_weight=".5"
			android:layout_height="match_parent"
			android:textSize="12sp"
			android:gravity="center" />
	    
    </LinearLayout>

</LinearLayout>
